--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+
+# Avoid git from tracking prettier file.
 .prettierignore
