--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "index.html",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html"
   },
   "keywords": [
     "HTML",
