modify(core): modify package.json after running parcel command

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Stephen Ikuomola",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.12.0",
+    "@parcel/transformer-webmanifest": "^2.12.0",
     "parcel": "^2.12.0"
   }
 }
