--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "author": "Stephen Ikuomola",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@parcel/packager-raw-url": "^2.12.0",
     "@parcel/transformer-webmanifest": "^2.12.0",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "parcel": "^2.12.0"
   }
 }
