--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "parcel": "^2.12.0",
     "prettier": "3.3.3"
+  },
+  "dependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
+    "eslint-plugin-jsdoc": "^50.2.2",
+    "eslint-plugin-package-json": "^0.15.2",
+    "eslint-plugin-perfectionist": "^3.2.0",
+    "eslint-plugin-prettier": "^5.2.1"
   }
 }
