--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "globals": "^15.9.0",
     "jsonc-eslint-parser": "^2.4.0",
     "parcel": "^2.13.0",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "svgo": "^3.3.2"
   }
 }
